[package]
name = "ufs"
version = "0.1.0"
authors = ["uberfoo"]
edition = "2018"

[features]
default  = ["fuse", "hyper", "reqwest", "ring"]

[[bench]]
name = "block-server"
harness = false

[dependencies]
bincode = "~1.2"
clap = "~2.33"
crossbeam = "~0.7"
dotenv = "~0.14"
failure = "~0.1"
futures = "~0.1"
lazy_static = "~1.4"
libc = "~0.2"
log = "~0.4"
pretty_env_logger = "~0.3"
rand = "~0.7"
serde = "~1.0"
serde_derive = "~1.0"
structopt = "~0.3"
time = "~0.1"
wasmi = "~0.5"
colored = "~1.8"
rpassword = "~4.0"
c2-chacha = "~0.2"
hmac = "~0.7"
sha2 = "~0.8"
pbkdf2 = "~0.3"

[dependencies.chrono]
version = "~0.4"
features = ["serde"]

[dependencies.fuse]
version = "~0.3"
optional = true

[dependencies.hyper]
version = "~0.12"
optional = true

[dependencies.reqwest]
version = "~0.9"
optional = true

[dependencies.ring]
version = "~0.16"
optional = true

[dependencies.uuid]
version = "~0.7"
default-features = false
features = ["v5", "serde"]

[dev-dependencies]
assert_matches = "~1.3"
criterion = "~0.3"
env_logger = "~0.7"
hex-literal = "~0.2"

[profile.test]
opt-level = 3