[package]
name = "ufs"
version = "0.1.0"
authors = ["uberfoo"]
edition = "2018"

[features]
default  = ["fuse", "hyper", "reqwest", "ring"]

[workspace]
members = ["wasm_exports"]

[[bench]]
name = "block-server"
harness = false

[dependencies]
bincode = "1.2.0"
clap = "2.33.0"
crossbeam = "0.7.2"
dotenv = "0.15.0"
failure = "0.1.6"
futures = "0.1.29"
handlebars = "2.0.2"
lazy_static = "1.4.0"
libc = "0.2.65"
log = "0.4.8"
pretty_env_logger = "0.3.1"
rand = "0.7.2"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
structopt = "0.3.3"
time = "0.1.42"
colored = "1.8.0"
rpassword = "4.0.1"
c2-chacha = "0.2.3"
hmac = "0.7.1"
sha2 = "0.8.0"
pbkdf2 = "0.3.0"
warp = { version = "0.1.20", feature = ["tls"] }
wasmer-runtime = "0.9.0"
wasm_exports = { path = "wasm_exports" }

[dependencies.chrono]
version = "0.4.9"
features = ["serde"]

[dependencies.fuse]
version = "0.3.1"
optional = true

[dependencies.hyper]
version = "0.12.35"
optional = true

[dependencies.reqwest]
version = "0.9.22"
optional = true

[dependencies.ring]
version = "0.16.9"
optional = true

[dependencies.uuid]
version = "0.8.1"
default-features = false
features = ["v5", "serde"]

[dev-dependencies]
assert_matches = "1.3.0"
criterion = "0.3.0"
env_logger = "0.7.1"
hex-literal = "0.2.1"

[profile.test]
opt-level = 3
