[package]
name = "echo"
version = "0.2.0"
authors = ["Keith T. Star <keith@uberfoo.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4"
mut_static = "5.0"
wasm_exports = { path = "../../wasm_exports" }
serde_json = "1.0.41"
uuid = { version = "0.8.0", features = ["v5"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = true

[workspace]
